--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-12">
                     <div class="main-button">
-                      <a href="browse.html">Discover Popular</a>
+                      <a href="browse.html">Ver Mais</a>
                     </div>
                   </div>
                 </div>
@@ -203,42 +203,42 @@ https://templatemo.com/tm-579-cyborg-gaming
           <div class="gaming-library">
             <div class="col-lg-12">
               <div class="heading-section">
-                <h4><em>Your Gaming</em> Library</h4>
+                <h4><em>Seus</em> FIlmes</h4>
               </div>
               <div class="item">
                 <ul>
-                  <li><img src="assets/images/game-01.jpg" alt="" class="templatemo-item"></li>
+                  <li><img src="assets/images/badBoys.png" alt="" class="templatemo-item"></li>
                   <li>
-                    <h4>Dota 2</h4><span>Sandbox</span>
+                    <h4>Bad Boys</h4><span>Ação/Comédia</span>
                   </li>
                   <li>
-                    <h4>Date Added</h4><span>24/08/2036</span>
+                    <h4>Lançamento</h4><span>1995</span>
                   </li>
                   <li>
-                    <h4>Hours Played</h4><span>634 H 22 Mins</span>
+                    <h4>Duração</h4><span>1h 59min</span>
                   </li>
                   <li>
-                    <h4>Currently</h4><span>Downloaded</span>
+                    <h4>Atualmente</h4><span>Donwload</span>
                   </li>
                   <li>
-                    <div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div>
+                    <div class="main-border-button"><a href="#">Donwload</a></div>
                   </li>
                 </ul>
               </div>
               <div class="item">
                 <ul>
-                  <li><img src="assets/images/game-02.jpg" alt="" class="templatemo-item"></li>
+                  <li><img src="assets/images/vingadores.png" alt="" class="templatemo-item"></li>
                   <li>
-                    <h4>Fortnite</h4><span>Sandbox</span>
+                    <h4>Vingadores</h4><span>Ação/Aventura</span>
                   </li>
                   <li>
-                    <h4>Date Added</h4><span>22/06/2036</span>
+                    <h4>Lançamento</h4><span>2012</span>
                   </li>
                   <li>
-                    <h4>Hours Played</h4><span>740 H 52 Mins</span>
+                    <h4>Duração</h4><span>2h 23min</span>
                   </li>
                   <li>
-                    <h4>Currently</h4><span>Downloaded</span>
+                    <h4>Atualmente</h4><span>Donwload</span>
                   </li>
                   <li>
                     <div class="main-border-button"><a href="#">Donwload</a></div>
@@ -247,28 +247,28 @@ https://templatemo.com/tm-579-cyborg-gaming
               </div>
               <div class="item last-item">
                 <ul>
-                  <li><img src="assets/images/game-03.jpg" alt="" class="templatemo-item"></li>
+                  <li><img src="assets/images/hAranhasvpc.png" alt="" class="templatemo-item"></li>
                   <li>
-                    <h4>CS-GO</h4><span>Sandbox</span>
+                    <h4>Homem-Aranha: Sem volta pra casa</h4><span>Ação/Ficção Científica</span>
                   </li>
                   <li>
-                    <h4>Date Added</h4><span>21/04/2036</span>
+                    <h4>Lançamento</h4><span>2021</span>
                   </li>
                   <li>
-                    <h4>Hours Played</h4><span>892 H 14 Mins</span>
+                    <h4>Duração</h4><span>2h 28min</span>
                   </li>
                   <li>
-                    <h4>Currently</h4><span>Downloaded</span>
+                    <h4>Atualmente</h4><span>Donwload</span>
                   </li>
                   <li>
-                    <div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div>
+                    <div class="main-border-button"><a href="#">Donwload</a></div>
                   </li>
                 </ul>
               </div>
             </div>
             <div class="col-lg-12">
               <div class="main-button">
-                <a href="profile.html">View Your Library</a>
+                <a href="profile.html">Ver sua Biblioteca</a>
               </div>
             </div>
           </div>
@@ -282,7 +282,7 @@ https://templatemo.com/tm-579-cyborg-gaming
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2036 <a href="#">Cyborg Gaming</a> Company. All rights reserved.
+          <p>Copyright © 2025 <a href="#">Mivoxie</a> Company. Todos os direitors reservados.
 
             <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>
           </p>
