--- a/browse.html
+++ b/browse.html
@@ -68,7 +68,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                       <li><a href="index.html">Home</a></li>
                       <li><a href="browse.html">Filmes</a></li>
                       <li><a href="details.html">Em Cartaz</a></li>
-                      <li><a href="streams.html" class="active">Streams</a></li>
+                      <li><a href="streams.html" class="active">Atores</a></li>
                       <li><a href="profile.html">Perfil <img src="assets/images/profile-header.jpg" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
@@ -92,17 +92,17 @@ https://templatemo.com/tm-579-cyborg-gaming
             <div class="col-lg-8">
               <div class="featured-games header-text">
                 <div class="heading-section">
-                  <h4><em>Featured</em> Games</h4>
+                  <h4><em>MELHORES</em> FILMES</h4>
                 </div>
                 <div class="owl-features owl-carousel">
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-01.jpg" alt="">
+                      <img src="assets/images/meninasM.png" alt="">
                       <div class="hover-effect">
-                        <h6>2.4K Streaming</h6>
+                        <h6>Meninas Malvadas</h6>
                       </div>
                     </div>
-                    <h4>CS-GO<br><span>249K Downloads</span></h4>
+                    <h4>Meninas Malvadas<br><span>Comédia/Romance</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -110,12 +110,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-02.jpg" alt="">
+                      <img src="assets/images/vingadoresU.png" alt="">
                       <div class="hover-effect">
-                        <h6>2.4K Streaming</h6>
+                        <h6>Vingadores: Ultimato</h6>
                       </div>
                     </div>
-                    <h4>Gamezer<br><span>249K Downloads</span></h4>
+                    <h4>Vingadores: Ultimato<br><span>Ação/Ficção Científica</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -123,12 +123,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-03.jpg" alt="">
+                      <img src="assets/images/dRepente30.png" alt="">
                       <div class="hover-effect">
-                        <h6>2.4K Streaming</h6>
+                        <h6>De repente 30</h6>
                       </div>
                     </div>
-                    <h4>Island Rusty<br><span>249K Downloads</span></h4>
+                    <h4>De repente 30<br><span>Comédia/Romance</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -136,12 +136,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-01.jpg" alt="">
+                      <img src="assets/images/esHARANHA.png" alt="">
                       <div class="hover-effect">
-                        <h6>2.4K Streaming</h6>
+                        <h6>O espetacular Homem-Aranha</h6>
                       </div>
                     </div>
-                    <h4>CS-GO<br><span>249K Downloads</span></h4>
+                    <h4>O espetacular Homem-Aranha<br><span>Ação/Ficção Científica</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -391,8 +391,7 @@ https://templatemo.com/tm-579-cyborg-gaming
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2036 <a href="#">Cyborg Gaming</a> Company. All rights reserved. 
-          
+          <p>Copyright © 2025 <a href="#">Mivoxie</a> Company. Todos os direitors reservados.          
           <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a></p>
         </div>
       </div>
