--- a/details.html
+++ b/details.html
@@ -68,7 +68,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                       <li><a href="index.html">Home</a></li>
                       <li><a href="browse.html">Filmes</a></li>
                       <li><a href="details.html">Em Cartaz</a></li>
-                      <li><a href="streams.html" class="active">Streams</a></li>
+                      <li><a href="streams.html" class="active">Atores</a></li>
                       <li><a href="profile.html">Perfil <img src="assets/images/profile-header.jpg" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
@@ -243,8 +243,7 @@ https://templatemo.com/tm-579-cyborg-gaming
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2036 <a href="#">Cyborg Gaming</a> Company. All rights reserved. 
-          
+          <p>Copyright © 2025 <a href="#">Mivoxie</a> Company. Todos os direitors reservados.          
           <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a></p>
         </div>
       </div>
