--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <li><a href="index.html">Home</a></li>
               <li><a href="browse.html">Filmes</a></li>
               <li><a href="details.html">Em Cartaz</a></li>
-              <li><a href="streams.html" class="active">Streams</a></li>
+              <li><a href="streams.html" class="active">Atores</a></li>
               <li><a href="profile.html">Perfil <img src="assets/images/profile-header.jpg" alt=""></a></li>
             </ul>
             <a class='menu-trigger'>
