quase - ok atores

--- a/streams.html
+++ b/streams.html
@@ -92,17 +92,17 @@ https://templatemo.com/tm-579-cyborg-gaming
             <div class="col-lg-8">
               <div class="featured-games header-text">
                 <div class="heading-section">
-                  <h4><em>Live</em> Streams</h4>
+                  <h4><em>Atores</em> Filmes</h4>
                 </div>
                 <div class="owl-features owl-carousel">
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-01.jpg" alt="">
+                      <img src="assets/images/LindsayL.png" alt="">
                       <div class="hover-effect">
-                        <h6>2.4K Streaming</h6>
+                        <h6>Lindsay Lohan</h6>
                       </div>
                     </div>
-                    <h4>CS-GO<br><span>249K Downloads</span></h4>
+                    <h4>Lindsay Lohan<br><span>Meninas Malvadas</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -110,12 +110,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-02.jpg" alt="">
+                      <img src="assets/images/MarkR.png" alt="">
                       <div class="hover-effect">
-                        <h6>2.4K Streaming</h6>
+                        <h6>Mark Ruffalo</h6>
                       </div>
                     </div>
-                    <h4>Gamezer<br><span>249K Downloads</span></h4>
+                    <h4>Mark Ruffalo<br><span>Vingadores: Ultimato</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -123,12 +123,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-03.jpg" alt="">
+                      <img src="assets/images/SamW.png" alt="">
                       <div class="hover-effect">
-                        <h6>2.4K Streaming</h6>
+                        <h6>Sam Worthington</h6>
                       </div>
                     </div>
-                    <h4>Island Rusty<br><span>249K Downloads</span></h4>
+                    <h4>Sam Worthington<br><span>Avatar</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -136,12 +136,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-01.jpg" alt="">
+                      <img src="assets/images/KevinH.png" alt="">
                       <div class="hover-effect">
-                        <h6>2.4K Streaming</h6>
+                        <h6>Kevin Hart</h6>
                       </div>
                     </div>
-                    <h4>CS-GO<br><span>249K Downloads</span></h4>
+                    <h4>Kevin Hart<br><span>Jumanji</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -149,12 +149,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-02.jpg" alt="">
+                      <img src="assets/images/Zendaya.png" alt="">
                       <div class="hover-effect">
-                        <h6>2.4K Streaming</h6>
+                        <h6>Zendaya</h6>
                       </div>
                     </div>
-                    <h4>Gamezer<br><span>249K Downloads</span></h4>
+                    <h4>Zendaya<br><span>Homem-Aranha: Sem volta para casa</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -162,12 +162,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-03.jpg" alt="">
+                      <img src="assets/images/MerylS.png" alt="">
                       <div class="hover-effect">
-                        <h6>2.4K Streaming</h6>
+                        <h6>Meryl Streep</h6>
                       </div>
                     </div>
-                    <h4>Island Rusty<br><span>249K Downloads</span></h4>
+                    <h4>Meryl Streep<br><span>O diabo veste Prada</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -206,22 +206,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                       <a href="#">Follow</a>
                     </div>
                   </li>
-                  <li>
-                    <span>04</span>
-                    <img src="assets/images/avatar-04.jpg" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
-                    <h6><i class="fa fa-check"></i> Omeg</h6>
-                    <div class="main-button">
-                      <a href="#">Follow</a>
-                    </div>
-                  </li>
-                  <li>
-                    <span>05</span>
-                    <img src="assets/images/avatar-01.jpg" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
-                    <h6><i class="fa fa-check"></i> GangTeam</h6>
-                    <div class="main-button">
-                      <a href="#">Follow</a>
-                    </div>
-                  </li>
+          
+                  
                 </ul>
               </div>
             </div>
