--- a/details.html
+++ b/details.html
@@ -93,12 +93,12 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="feature-banner header-text">
                 <div class="row">
                   <div class="col-lg-4">
-                    <img src="assets/images/feature-left.jpg" alt="" style="border-radius: 23px;">
+                    <img src="assets/images/Vingadores2026.png" alt="" style="border-radius: 23px;">
                   </div>
                   <div class="col-lg-8">
                     <div class="thumb">
                       <img src="assets/images/feature-right.jpg" alt="" style="border-radius: 23px;">
-                      <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i class="fa fa-play"></i></a>
+                      <a href="https://youtu.be/V-G54qlNZMk?feature=shared" target="_blank"><i class="fa fa-play"></i></a>
                     </div>
                   </div>
                 </div>
