--- a/profile.html
+++ b/profile.html
@@ -93,24 +93,23 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="main-profile ">
                 <div class="row">
                   <div class="col-lg-4">
-                    <img src="assets/images/profile.jpg" alt="" style="border-radius: 23px;">
+                    <img src="assets/images/Perfil.png" alt="" style="border-radius: 23px;">
                   </div>
                   <div class="col-lg-4 align-self-center">
                     <div class="main-info header-text">
                       <span>Offline</span>
-                      <h4>Alan Smithee</h4>
-                      <p>You Haven't Gone Live yet. Go Live By Touching The Button Below.</p>
+                      <h4>Isadora</h4>
                       <div class="main-border-button">
-                        <a href="#">Start Live Stream</a>
+                        <a href="#">Filmes Baixados</a>
                       </div>
                     </div>
                   </div>
                   <div class="col-lg-4 align-self-center">
                     <ul>
-                      <li>Games Downloaded <span>3</span></li>
-                      <li>Friends Online <span>16</span></li>
-                      <li>Live Streams <span>None</span></li>
-                      <li>Clips <span>29</span></li>
+                      <li>Filmes Downloaded <span>3</span></li>
+                      <li>Amigos Online <span>16</span></li>
+                      <li>Atores Favoritos <span>None</span></li>
+                      <li>Filmes Favoritos <span>29</span></li>
                     </ul>
                   </div>
                 </div>
@@ -120,17 +119,17 @@ https://templatemo.com/tm-579-cyborg-gaming
                       <div class="row">
                         <div class="col-lg-12">
                           <div class="heading-section">
-                            <h4><em>Your Most Popular</em> Clips</h4>
+                            <h4><em>FILMES em </em>Downloaded</h4>
                           </div>
                         </div>
                         <div class="col-lg-3 col-sm-6">
                           <div class="item">
                             <div class="thumb">
-                              <img src="assets/images/clip-01.jpg" alt="" style="border-radius: 23px;">
-                              <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i class="fa fa-play"></i></a>
+                              <img src="assets/images/hAranhasvpc.png" alt="" style="border-radius: 23px;">
+                              <a href="https://www.tokyvideo.com/video/homem-aranha-sem-volta-para-casa-2021-vini7xg" target="_blank"><i class="fa fa-play"></i></a>
                             </div>
                             <div class="down-content">
-                              <h4>First Clip</h4>
+                              <h4>homem-aranha:sem volta para casa</h4>
                               <span><i class="fa fa-eye"></i> 250</span>
                             </div>
                           </div>
@@ -138,11 +137,11 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <div class="col-lg-3 col-sm-6">
                           <div class="item">
                             <div class="thumb">
-                              <img src="assets/images/clip-02.jpg" alt="" style="border-radius: 23px;">
-                              <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i class="fa fa-play"></i></a>
+                              <img src="assets/images/diarioP.png" alt="" style="border-radius: 23px;">
+                              <a href="https://www.tokyvideo.com/video/diario-da-princesa-2001-vini7xg" target="_blank"><i class="fa fa-play"></i></a>
                             </div>
                             <div class="down-content">
-                              <h4>Second Clip</h4>
+                              <h4>Diário de uma Princesa</h4>
                               <span><i class="fa fa-eye"></i> 183</span>
                             </div>
                           </div>
@@ -150,11 +149,11 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <div class="col-lg-3 col-sm-6">
                           <div class="item">
                             <div class="thumb">
-                              <img src="assets/images/clip-03.jpg" alt="" style="border-radius: 23px;">
-                              <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i class="fa fa-play"></i></a>
+                              <img src="assets/images/odvprada.png" alt="" style="border-radius: 23px;">
+                              <a href="https://www.tokyvideo.com/video/o-diabo-veste-prada-2006-vini7xg" target="_blank"><i class="fa fa-play"></i></a>
                             </div>
                             <div class="down-content">
-                              <h4>Third Clip</h4>
+                              <h4>O diabo veste Prada</h4>
                               <span><i class="fa fa-eye"></i> 141</span>
                             </div>
                           </div>
@@ -162,18 +161,18 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <div class="col-lg-3 col-sm-6">
                           <div class="item">
                             <div class="thumb">
-                              <img src="assets/images/clip-04.jpg" alt="" style="border-radius: 23px;">
-                              <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i class="fa fa-play"></i></a>
+                              <img src="assets/images/dRepente30.png" alt="" style="border-radius: 23px;">
+                              <a href="https://www.tokyvideo.com/video/de-repente-30-2004-dublado" target="_blank"><i class="fa fa-play"></i></a>
                             </div>
                             <div class="down-content">
-                              <h4>Fourth Clip</h4>
+                              <h4>De repente 30</h4>
                               <span><i class="fa fa-eye"></i> 91</span>
                             </div>
                           </div>
                         </div>
                         <div class="col-lg-12">
                           <div class="main-button">
-                            <a href="#">Load More Clips</a>
+                            <a href="#">Mais filmes baixados</a>
                           </div>
                         </div>
                       </div>
@@ -189,36 +188,36 @@ https://templatemo.com/tm-579-cyborg-gaming
           <div class="gaming-library profile-library">
             <div class="col-lg-12">
               <div class="heading-section">
-                <h4><em>Your Gaming</em> Library</h4>
+                <h4><em>Minha</em> Biblioteca</h4>
               </div>
               <div class="item">
                 <ul>
-                  <li><img src="assets/images/game-01.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>Dota 2</h4><span>Sandbox</span></li>
-                  <li><h4>Date Added</h4><span>24/08/2036</span></li>
-                  <li><h4>Hours Played</h4><span>634 H 22 Mins</span></li>
-                  <li><h4>Currently</h4><span>Downloaded</span></li>
-                  <li><div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div></li>
+                  <li><img src="assets/images/meninasM.png" alt="" class="templatemo-item"></li>
+                  <li><h4>Meninas Malvadas</h4><span>Comédia/Romace</span></li>
+                  <li><h4>Lançamento</h4><span>2004</span></li>
+                  <li><h4>Duração</h4><span>1h 37min</span></li>
+                  <li><h4>Situação</h4><span>Downloaded</span></li>
+                  <li><div class="main-border-button border-no-active"><a href="https://www.tokyvideo.com/video/meninas-malvadas-2004">Donwloaded</a></div></li>
                 </ul>
               </div>
               <div class="item">
                 <ul>
-                  <li><img src="assets/images/game-02.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>Fortnite</h4><span>Sandbox</span></li>
-                  <li><h4>Date Added</h4><span>22/06/2036</span></li>
-                  <li><h4>Hours Played</h4><span>745 H 22 Mins</span></li>
-                  <li><h4>Currently</h4><span>Downloaded</span></li>
-                  <li><div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div></li>
+                  <li><img src="assets/images/jumanji.png" alt="" class="templatemo-item"></li>
+                  <li><h4>Jumanji</h4><span>Aventura/Ação</span></li>
+                  <li><h4>Lançamento</h4><span>2017</span></li>
+                  <li><h4>Duração</h4><span>1h 59min</span></li>
+                  <li><h4>Situação</h4><span>Downloaded</span></li>
+                  <li><div class="main-border-button border-no-active"><a href="https://www.tokyvideo.com/video/jumanji-bem-vindo-a-selva-acao-fantasia-2018-dublado-sunrise">Donwloaded</a></div></li>
                 </ul>
               </div>
               <div class="item last-item">
                 <ul>
-                  <li><img src="assets/images/game-03.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>CS-GO</h4><span>Sandbox</span></li>
-                  <li><h4>Date Added</h4><span>21/04/2022</span></li>
-                  <li><h4>Hours Played</h4><span>632 H 46 Mins</span></li>
-                  <li><h4>Currently</h4><span>Downloaded</span></li>
-                  <li><div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div></li>
+                  <li><img src="assets/images/badBoys.png" alt="" class="templatemo-item"></li>
+                  <li><h4>Bad Boys</h4><span>Ação/Comédia</span></li>
+                  <li><h4>Lançamento</h4><span>1995</span></li>
+                  <li><h4>Duração</h4><span>1h 59min</span></li>
+                  <li><h4>Situação</h4><span>Downloaded</span></li>
+                  <li><div class="main-border-button border-no-active"><a href="https://www.tokyvideo.com/video/d-os-bad-boys-1995-dublado-1080p-acao-aventura">Donwloaded</a></div></li>
                 </ul>
               </div>
             </div>
