--- a/details.html
+++ b/details.html
@@ -82,7 +82,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <li><a href="streams.html" class="active">Atores</a></li>
                 <li>
                   <a href="profile.html"
-                    >Perfil <img src="assets/images/profile-header.jpg" alt=""
+                    >Perfil <img src="assets/images/profile-header.png" alt=""
                   /></a>
                 </li>
               </ul>
