--- a/profile.html
+++ b/profile.html
@@ -69,7 +69,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                       <li><a href="browse.html">Filmes</a></li>
                       <li><a href="details.html">Em Cartaz</a></li>
                       <li><a href="streams.html" class="active">Atores</a></li>
-                      <li><a href="profile.html">Perfil <img src="assets/images/profile-header.jpg" alt=""></a></li>
+                      <li><a href="profile.html">Perfil <img src="assets/images/profile-header.png" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
